--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     </style>
   </head>
   <body>
-    <h1>hello world</h1>
 
     <div class="container">
+      <h1 id='title'>Emoji Memory</h1>
+      
+      <div class="play-again-button">
+        <button type="button" name="button">Play again!</button>
+      </div>
+
       <div class="card unmatched"></div>
       <div class="card unmatched"></div>
       <div class="card unmatched"></div>
