add css changes

--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
     </style>
   </head>
   <body>
+    <div class="title">
+      <h1 id='title'>Emoji Memory</h1>
+    </div>
+    <div class="play-again-button">
+      <button class="restart-button action-button shadow animate blue" type="button" name="button">Restart</button>
+    </div>
 
     <div class="container">
-      <h1 id='title'>Emoji Memory</h1>
-      
-      <div class="play-again-button">
-        <button type="button" name="button">Play again!</button>
-      </div>
-
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
-      <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
+        <div class="card unmatched"></div>
     </div>
 
   </body>
